# src/types/transaction.ts
@@ -1,0 +1,6 @@
+export type TRANSACTION = {
+  id: number;
+  transaction_type: string;
+  currency: string;
+  amount: number;
+};
